--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "My first airflow"
 authors = [
     {name = "jacob-53", email = "jacob8753@gmail.com"},
 ]
-dependencies = ["requests>=2.32.3"]
+dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "pyarrow>=19.0.1"]
 requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
